# PEFT

./: .gitignore  README.md  ia3.ipynb  lora.ipynb  pyproject.toml
src/: util.py
src/model/: __init__.py  attn.py  decoder.py  encoder.py  ffn.py  pe.py  positional_encodings.py  rope.py  transformer.py
src/peft/ia3/: model.py
test/: test_inference_transformer.py
tests/: setup_path.py  test-sample.py  test_attention.py  test_inference_transformer.py  test_lora.py  test_rope.py  test_transformer_block.py  test_yarn.py
